# VCS

./: .gitignore  .imperiumIgnore  CMakeLists.txt  Makefile  README.md
include/: CLI11.hpp  compression.h  ordered_map.h  util.h
include/openssl/: e_os2.h  opensslconf.h  opensslv.h  sha.h
resources/: new.md
scripts/: build.sh  imperium.sh  script1.sh
src/: blob_object.cpp  blob_object.h  cli.h  commit_object.cpp  commit_object.h  configParser.h  imperium_object.cpp  imperium_object.h  index.cpp  index.h  lockfile.cpp  lockfile.h  main.cpp  refs.cpp  refs.h  repository.cpp  repository.h  repository.hpp  tree_object.cpp  tree_object.h
src/cli/: add.h  cat_file.h  cli.h  commit.h  hash_object.h  init.h  write_tree.h
tests/: hello  test  test.cpp
